2009-07-22  Eric Blake  <ebb9@byu.net>

	Avoid a fault from locking a closed standard file.
	* libc/stdio/fflush.c (_fflush_r): Give up early if stream has
	been previously closed.

2009-07-09  Craig Howland <howland@LGSInnovations.com>

	* libm/math/ef_scalb.c:  Replace isnanf() (pre-C99 function call) with
	isnan() (C99 macro).
	* libm/math/wf_log.c:  Ditto.
	* libm/math/wf_j0.c:  Ditto.
	* libm/math/wf_sqrt.c:  Ditto.
	* libm/math/wf_pow.c:  Ditto.
	* libm/math/wf_fmod.c:  Ditto.
	* libm/math/wf_remainder.c:  Ditto.
	* libm/math/wf_scalb.c:  Ditto.
	* libm/math/wf_atanh.c:  Ditto.
	* libm/math/wf_cosh.c:  Ditto.
	* libm/math/wf_acos.c:  Ditto.
	* libm/math/wf_acosh.c:  Ditto.
	* libm/math/wf_jn.c:  Ditto.
	* libm/math/wf_log10.c:  Ditto.
	* libm/math/wf_asin.c:  Ditto.
	* libm/math/wf_j1.c:  Ditto.
	* libm/common/sf_isnan.c:  Add #include <ieeefp.h>, fix comment.
	* libm/common/sf_isinf.c:  Add #include <ieeefp.h>, adjust comment to
	match that from s_isinf.c.
	* libc/include/machine/ieeefp.h:  Simplify isinf and isnan macros to
	remove un-necessary extension use (in a similar manner to as was
	recently done in math.h).
	* libc/include/math.h:  Remove isnanf and isinff prototypes (are in
	ieeefp.h).
	* libm/machine/spu/sf_isinf.c:  Fix comment (remove <math.h>).

2009-07-06  Joel Sherrill <joel.sherrill@oarcorp.com>

	* libc/include/sys/features.h: Enable UNIX98 mutex attributes
	for RTEMS.

2009-07-03  Eric Blake  <ebb9@byu.net>

	Add mkdtemp, mkstemps.
	* libc/stdio/mktemp.c: Fix documentation.
	(_gettemp): Add domkdir and length parameters.  Check for
	insufficient 'X' suffix.  Drop cygwin-specific code.
	(_mkstemp_r, _mktemp_r, mkstemp, mktemp): Adjust clients.
	(_mkdtemp_r, _mkstemps_r, mkdtemp, mkstemps): New functions.
	* libc/include/stdlib.h (_mkdtemp_r, _mkstemps_r, mkdtemp)
	(mkstemps): Declare them.

	Add fpurge.
	* libc/stdio/fpurge.c (fpurge, _fpurge_r): New file.
	* libc/stdio/Makefile.am (ELIX_4_SOURCES, CHEWOUT_FILES, fpurge):
	Build it.