@@ -1,3 +1,8 @@
+2009-07-28  Corinna Vinschen  <corinna@vinschen.de>
+
+	* libc/stdlib/mbtowc_r.c (__utf8_mbtowc): Fix incrementing n in case
+	of handling incomplete sequences.
+
 2009-07-22  Eric Blake  <ebb9@byu.net>
 
 	Avoid a fault from locking a closed standard file.
